--- a/Opserver.Core/Opserver.Core.csproj
+++ b/Opserver.Core/Opserver.Core.csproj
@@ -56,6 +56,10 @@
       <HintPath>..\packages\MiniProfiler.3.2.0.157\lib\net40\MiniProfiler.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -154,6 +158,7 @@
     <Compile Include="Data\Elastic\ElasticIssues.cs" />
     <Compile Include="Data\Elastic\ShardStates.cs" />
     <Compile Include="Data\Exceptions\ExceptionSorts.cs" />
+    <Compile Include="Data\Exceptions\ExceptionStoreMySQL.cs" />
     <Compile Include="Data\HAProxy\HAProxyGroup.Cache.cs">
       <DependentUpon>HAProxyGroup.cs</DependentUpon>
     </Compile>
@@ -240,6 +245,7 @@
     <Compile Include="Helpers\FileSizeFormatProvider.cs" />
     <Compile Include="Data\IPNet.cs" />
     <Compile Include="Helpers\LocalCache.cs" />
+    <Compile Include="Helpers\MySQLConnection.cs" />
     <Compile Include="Helpers\Singleton.cs" />
     <Compile Include="Helpers\WindowsKernelVersions.cs" />
     <Compile Include="IMinVersioned.cs" />
@@ -321,7 +327,6 @@
       <DependentUpon>Volume.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\Exceptions\Application.cs" />
-    <Compile Include="Data\Exceptions\ExceptionStore.cs" />
     <Compile Include="Data\Exceptions\ExceptionStores.cs" />
     <Compile Include="Data\HAProxy\Backend.cs" />
     <Compile Include="Data\HAProxy\Frontend.cs" />
